2002-05-04  Kazu Hirata  <kazu@cs.umass.edu>

	* config/tc-mips.c: Fix formatting.
	* config/tc-s390.c: Likewise.
	* config/tc-s390.h: Likewise.

2002-05-03  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-s390.c (md_gather_operands): Emit dwarf2 line-number
	information for instructions.

2002-05-02  Kazu Hirata  <kazu@cs.umass.edu>

	* as.h: Fix formatting.
	* cgen.c: Likewise.
	* cgen.h: Likewise.
	* dwarf2dbg.c: Likewise.
	* frags.h: Likewise.
	* gasp.c: Likewise.
	* macro.c: Likewise.
	* read.c: Likewise.
	* stabs.c: Likewise.
	* symbols.c: Likewise.

2002-05-02  Alan Modra  <amodra@bigpond.net.au>

	* app.c (mri_pseudo): Only declare for TC_M68K.

	* config/tc-ppc.c (mapping): Map sectoff to BFD_RELOC_16_BASEREL.
	(ppc_elf_validate_fix): Replace BFD_RELOC_32_BASEREL with
	BFD_RELOC_16_BASEREL.
	(md_assemble): Likewise.
	(md_apply_fix3): Likewise.

2002-05-02  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-arm.c (thumb_add_sub): Do not convert a subtract of
	zero into an add of zero - it is not the same.

2002-05-01  Arati Dikey <aratid@kpit.com>

	* tc-sh.c (get_specific): Generate warning if the same
	destination register is used in parallel instructions.

2002-05-01  Andrew Macleod  <amacleod@cygnus.com>

	* config/tc-i386.c (extra_symbol_chars): Add '[' to the list.

2002-05-01  Alan Modra  <amodra@bigpond.net.au>

	* write.c (cvt_frag_to_fill): Set fr_offset to zero on .org
	backwards to prevent cascading errors.

2002-04-30  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Add support for powerpc-*-windiss.
	* configure: Regenerated.
	
2002-04-28  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-s390.c (md_parse_option): Formatting.

	* config/tc-i386.c: Formatting fixes, add missing space in error
	message.

2002-04-24  Christian Groessler <chris@groessler.org>

	* config/tc-z8k.c (build_bytes): Add support for new cases:
	CLASS_IGNORE and ARG_NIM4.
	(md_assemble): Prevent destruction of input_line_pointer if