@@ -1,3 +1,8 @@
+2002-05-06  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/tc-ia64.c: Fix formatting.
+	* config/tc-ia64.h: Likewise.
+
 2002-05-04  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/tc-mips.c: Fix formatting.
